test/sema/typeck/module/class-field-not-accessible.out
error: element is not accessible.
--> class-field-not-accessible.dora:1:30
 | fn f(x: foo::Foo) { let _a = x.bar; }
                                ~~~~~
 | mod foo { pub class Foo { bar: Int32 } }
 | 
1 error found.
