test/sema/typeck/module/class-field-not-accessible.dora
fn f(x: foo::Foo) { let _a = x.bar; }
mod foo { pub class Foo { bar: Int32 } }
